# Chip8-Emulator

./: CMakeLists.txt  README.md
inc/: chip8.h
src/: InstructionsChip8.cpp  chip8.cpp  main.cpp
